Teste de Função

--- a/Promises de JavaScript/index.html
+++ b/Promises de JavaScript/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
     <title>Document</title>
 </head>
 <body>
+    <H1 class="resposta" id="cor">Resposta de JS em api Github</H1>
+    <h2 id="teste">Testando Chamada pelo VS através do document.</h2>
     
 </body>
 </html>
